--- a/fighting.html
+++ b/fighting.html
@@ -98,9 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>January 09, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 09, 2026 11:00:00"></span></td>
+<td><a href="https://roxiestreams.live/ppv-streams-1">MATIAS vs SMITH</a></td>
+<td>January 10, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 10, 2026 5:00:00"></span></td>
 </tr>
 <tr>
 </tbody>
