--- a/fighting.html
+++ b/fighting.html
@@ -103,6 +103,11 @@
 <td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 10, 2026 17:00:00"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.live/ppv-streams-3">RAF 5: Covington vs. Rockhold</a></td>
+<td>January 10, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 10, 2026 17:00:00"></span></td>
+</tr>
+<tr>
 </tbody>
 </table>
 </div>
