--- a/nfl-streams-2.html
+++ b/nfl-streams-2.html
@@ -121,7 +121,7 @@
 <script>
 var clapprPlayer;
 var domains = [];
-var subdomain = 'daffodil';  // Edit this per HTML file
+var subdomain = '601';  // Edit this per HTML file
 
 // Load domains from txt file
 fetch('domains.txt')
@@ -129,13 +129,13 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('nfl.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('nfl2.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
   });
 
-function getRandomStream(streamPath, subdomain = 'daffodil') {
+function getRandomStream(streamPath, subdomain = '601') {
   if (domains.length === 0) {
     return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
   }
