--- a/nba-streams-4.html
+++ b/nba-streams-4.html
@@ -137,7 +137,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.shadow-ran.online/nba4.m3u8');
+            showPlayer('clappr', 'https://601.shadow-ran.online/nba4.m3u8');
         };
     </script>
     <script>
