--- a/ppv-streams-3.html
+++ b/ppv-streams-3.html
@@ -146,9 +146,9 @@
         }
     }
 
-    window.onload = function() {
-        showPlayer('clappr', 'https://601.shadow-ran.online/ppv3.m3u8');
-    };
+window.onload = function() {
+    showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-raf-05-covington-vs-rockhold/1');
+};
 </script>
 
 <script>
