--- a/nba.html
+++ b/nba.html
@@ -226,6 +226,166 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 11, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         New Orleans Pelicans vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        January 11, 2026 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 12:00 PM:00" data-start="January 11, 2026 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Brooklyn Nets vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        January 11, 2026 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 12:30 PM:00" data-start="January 11, 2026 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Philadelphia 76ers vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        January 11, 2026 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 3:00 PM:00" data-start="January 11, 2026 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         New York Knicks vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        January 11, 2026 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 3:00 PM:00" data-start="January 11, 2026 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         San Antonio Spurs vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        January 11, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 4:00 PM:00" data-start="January 11, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Miami Heat vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        January 11, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 4:00 PM:00" data-start="January 11, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Milwaukee Bucks vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        January 11, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 5:00 PM:00" data-start="January 11, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Washington Wizards vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        January 11, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 5:00 PM:00" data-start="January 11, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Atlanta Hawks vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        January 11, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 5:30 PM:00" data-start="January 11, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Houston Rockets vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        January 11, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 12, 2026 6:00 PM:00" data-start="January 11, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
