--- a/nhl.html
+++ b/nhl.html
@@ -164,6 +164,34 @@
             <td><a href="https://roxiestreams.live/nhl-streams-14">St. Louis Blues vs Vegas Golden Knights</a></td>
             <td>January 10, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-11 19:00:00" data-start="2026-01-10 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Sunday, January 11, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">New Jersey Devils vs Winnipeg Jets</a></td>
+            <td>January 11, 2026 11:00 AM</td>
+            <td><span class="countdown-timer" data-end="2026-01-12 11:00:00" data-start="2026-01-11 11:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Pittsburgh Penguins vs Boston Bruins</a></td>
+            <td>January 11, 2026 02:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-12 14:00:00" data-start="2026-01-11 14:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Washington Capitals vs Nashville Predators</a></td>
+            <td>January 11, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-12 16:00:00" data-start="2026-01-11 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Columbus Blue Jackets vs Utah Mammoth</a></td>
+            <td>January 11, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-12 16:00:00" data-start="2026-01-11 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Vegas Golden Knights vs San Jose Sharks</a></td>
+            <td>January 11, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-12 17:00:00" data-start="2026-01-11 17:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
