--- a/nfl.html
+++ b/nfl.html
@@ -123,55 +123,7 @@
   <div class="container container-fluid pt-2 text-white">
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NCAA Events
-    </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
-        Event
-       </th>
-       <th>
-        Start Time
-       </th>
-       <th>
-        Countdown
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-1">
-         Los Angeles Rams vs Carolina Panthers
-        </a>
-       </td>
-       <td>
-        January 10, 2026 1:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="January 11, 2026 01:30:00 PM" data-start="January 10, 2026 01:30:00 PM">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-2">
-         Green Bay Packers vs Chicago Bears
-        </a>
-       </td>
-       <td>
-        January 10, 2026 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="January 11, 2026 05:00:00 PM" data-start="January 10, 2026 05:00:00 PM">
-        </span>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-    <h2>
-     NFL Schedule for Sunday, January 11, 2026
+     Upcoming NFL Events
     </h2>
     <table id="eventsTable">
      <thead>
