--- a/index.html
+++ b/index.html
@@ -185,33 +185,23 @@
 <tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer">FA Cup</a></td>
-<td>January 10, 2026 4:15 AM</td>
+<td>January 11, 2026 4:00 AM</td>
 <td><span class="countdown-timer" data-end="January 11, 2026 04:15:00 AM" data-start="January 10, 2026 04:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 10, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 11, 2026 10:00:00 AM" data-start="January 10, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/supercross">AMA Supercross Rd. 1</a></td>
-<td>January 10, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 11, 2026 10:00:00 AM" data-start="January 10, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</a></td>
-<td>January 10, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 11, 2026 12:00:00 PM" data-start="January 10, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.live/nfl">NFL Playoffs</a></td>
-<td>January 10, 2026 1:30 PM</td>
+<td>January 11, 2026 10:00 AM</td>
 <td><span class="countdown-timer" data-end="January 11, 2026 01:30:00 PM" data-start="January 10, 2026 01:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer">Liga MX</a></td>
-<td>January 10, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 11, 2026 05:00:00 PM" data-start="January 10, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Supercopa de España</a></td>
+<td>January 10, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="January 11, 2026 12:00:00 PM" data-start="January 10, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/nba">NBA</a></td>
+<td>January 11, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 11, 2026 10:00:00 AM" data-start="January 10, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
