--- a/soccer-streams-15.html
+++ b/soccer-streams-15.html
@@ -101,7 +101,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/tudn.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8')">Stream 1 (Multi Quality)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/sportv.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -136,7 +137,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.shadow-ran.online/tudn.m3u8');
+            showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8');
         };
     </script>
     <script>
@@ -152,11 +153,22 @@
         });
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
-
-
 <script type="text/javascript">
-aclib.runPop({
-zoneId: '10754426',
-});
-</script></body>
+    aclib.runPop({
+        zoneId: '10754426',
+    });
+</script>
+    <script>
+        atOptions = {
+            'key' : 'b1b8ec11c0dbedd922608bac17f740ee',
+            'format' : 'iframe',
+            'height' : 250,
+            'width' : 300,
+            'params' : {}
+        };
+    </script>
+    <script src="https://monthspathsmug.com/b1b8ec11c0dbedd922608bac17f740ee/invoke.js"></script>
+    <script src="https://monthspathsmug.com/39/5b/74/395b743c98df9f3269c808abb2b1d06a.js"></script>
+
+</body>
 </html>
