--- a/soccer-streams-15.html
+++ b/soccer-streams-15.html
@@ -101,7 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8')">Stream 1 (Multi Quality)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://d162h6qqsk8wvl.cloudfront.net/0c972070-8470-4297-9bd1-1c9ad58cbfd3/manifest.m3u8')">Stream 1 (Multi Quality)</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/sportv.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
@@ -137,7 +137,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8');
+            showPlayer('clappr', 'https://d162h6qqsk8wvl.cloudfront.net/0c972070-8470-4297-9bd1-1c9ad58cbfd3/manifest.m3u8');
         };
     </script>
     <script>
