--- a/nfl.html
+++ b/nfl.html
@@ -171,7 +171,7 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nfl-streams-3">
-         Los Angeles Rams vs New England Patriots
+         Los Angeles Chargers vs New England Patriots
         </a>
        </td>
        <td>
