--- a/soccer.html
+++ b/soccer.html
@@ -98,97 +98,37 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Lecce vs Parma</a></td>
-<td>January 11, 2026 3:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Al Hilal vs Al Nassr</a></td>
+<td>January 12, 2026 9:30 AM</td>
 <td><span class="countdown-timer" data-end="January 12, 2026 03:30:00 AM" data-start="January 11, 2026 03:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Derby County vs Leeds United</a></td>
-<td>January 11, 2026 4:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Genoa vs Cagliari</a></td>
+<td>January 12, 2026 9:30 AM</td>
 <td><span class="countdown-timer" data-end="January 12, 2026 04:00:00 AM" data-start="January 11, 2026 04:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Rayo Vallecano vs Mallorca</a></td>
-<td>January 11, 2026 5:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Liverpool vs Barnsley</a></td>
+<td>January 12, 2026 11:45 AM</td>
 <td><span class="countdown-timer" data-end="January 12, 2026 05:00:00 AM" data-start="January 11, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Dundee vs Hearts</a></td>
-<td>January 11, 2026 6:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Juventus vs Cremonese</a></td>
+<td>January 12, 2026 11:45 AM</td>
 <td><span class="countdown-timer" data-end="January 12, 2026 06:00:00 AM" data-start="January 11, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Portsmouth vs Arsenal</a></td>
-<td>January 11, 2026 6:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Sevilla vs Celta Vigo</a></td>
+<td>January 12, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 12, 2026 06:00:00 AM" data-start="January 11, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Fiorentina vs Milan</a></td>
-<td>January 11, 2026 6:00 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 06:00:00 AM" data-start="January 11, 2026 06:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">West Ham United vs Queens Park Ragers</a></td>
-<td>January 11, 2026 6:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">PSG vs Paris</a></td>
+<td>January 12, 2026 12:10 PM</td>
 <td><span class="countdown-timer" data-end="January 12, 2026 06:30:00 AM" data-start="January 11, 2026 06:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Levante vs Espanyol</a></td>
-<td>January 11, 2026 7:15 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 07:15:00 AM" data-start="January 11, 2026 07:15:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Aberdeen vs Rangers</a></td>
-<td>January 11, 2026 8:30 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 08:30:00 AM" data-start="January 11, 2026 08:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Manchester United vs Brighton</a></td>
-<td>January 11, 2026 8:30 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 08:30:00 AM" data-start="January 11, 2026 08:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Bayern München vs Wolfsburg</a></td>
-<td>January 11, 2026 8:30 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 08:30:00 AM" data-start="January 11, 2026 08:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Verona vs Lazio</a></td>
-<td>January 11, 2026 9:00 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 09:00:00 AM" data-start="January 11, 2026 09:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Nantes vs Nice</a></td>
-<td>January 11, 2026 9:00 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 09:00:00 AM" data-start="January 11, 2026 09:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Pumas UNAM vs Querétaro</a></td>
-<td>January 11, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 10:00:00 AM" data-start="January 11, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Barcelona vs Real Madrid</a></td>
-<td>January 11, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 11:00:00 AM" data-start="January 11, 2026 11:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Inter Milan vs Napoli</a></td>
-<td>January 11, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 11:45:00 AM" data-start="January 11, 2026 11:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Lille vs Lyon</a></td>
-<td>January 11, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 12:00:00 PM" data-start="January 11, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Atlético San Luis vs Tigres UANL</a></td>
-<td>January 11, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 05:00:00 PM" data-start="January 11, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-</tr></tbody></tr></tbody></table></div>
+</tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
