--- a/soccer.html
+++ b/soccer.html
@@ -100,35 +100,35 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Al Hilal vs Al Nassr</a></td>
 <td>January 12, 2026 9:30 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 03:30:00 AM" data-start="January 11, 2026 03:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 13, 2026 09:30:00 AM" data-start="January 12, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Genoa vs Cagliari</a></td>
 <td>January 12, 2026 9:30 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 04:00:00 AM" data-start="January 11, 2026 04:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 13, 2026 09:30:00 AM" data-start="January 12, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Liverpool vs Barnsley</a></td>
 <td>January 12, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 05:00:00 AM" data-start="January 11, 2026 05:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 13, 2026 11:45:00 AM" data-start="January 12, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Juventus vs Cremonese</a></td>
 <td>January 12, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 06:00:00 AM" data-start="January 11, 2026 06:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 13, 2026 11:45:00 AM" data-start="January 12, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Sevilla vs Celta Vigo</a></td>
 <td>January 12, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 06:00:00 AM" data-start="January 11, 2026 06:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 13, 2026 12:00:00 PM" data-start="January 12, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">PSG vs Paris</a></td>
 <td>January 12, 2026 12:10 PM</td>
-<td><span class="countdown-timer" data-end="January 12, 2026 06:30:00 AM" data-start="January 11, 2026 06:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 13, 2026 12:10:00 PM" data-start="January 12, 2026 12:10:00 PM"></span></td>
 </tr>
 <tr>
-</tbody></tr></tbody></table></div>
+</tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
