--- a/nhl.html
+++ b/nhl.html
@@ -119,6 +119,54 @@
             <td><a href="https://roxiestreams.live/nhl-streams-5">Vegas Golden Knights vs San Jose Sharks</a></td>
             <td>January 11, 2026 05:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-12 17:00:00" data-start="2026-01-11 17:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Monday, January 12, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Florida Panthers vs Buffalo Sabres</a></td>
+            <td>January 12, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-13 16:00:00" data-start="2026-01-12 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Carolina Hurricanes vs Detroit Red Wings</a></td>
+            <td>January 12, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-13 16:00:00" data-start="2026-01-12 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Seattle Kraken vs New York Rangers</a></td>
+            <td>January 12, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-13 16:00:00" data-start="2026-01-12 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Tampa Bay Lightning vs Philadelphia Flyers</a></td>
+            <td>January 12, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-13 16:00:00" data-start="2026-01-12 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Vancouver Canucks vs Montreal Canadiens</a></td>
+            <td>January 12, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-13 16:30:00" data-start="2026-01-12 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">New Jersey Devils vs Minnesota Wild</a></td>
+            <td>January 12, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-13 17:00:00" data-start="2026-01-12 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Edmonton Oilers vs Chicago Blackhawks</a></td>
+            <td>January 12, 2026 05:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-13 17:30:00" data-start="2026-01-12 17:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Toronto Maple Leafs vs Colorado Avalanche</a></td>
+            <td>January 12, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-13 19:00:00" data-start="2026-01-12 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Dallas Stars vs Los Angeles Kings</a></td>
+            <td>January 12, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-13 19:00:00" data-start="2026-01-12 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
