--- a/fighting.html
+++ b/fighting.html
@@ -98,14 +98,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">MATIAS vs SMITH</a></td>
-<td>January 10, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 10, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+<td>January 12, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 12, 2026 17:00:00"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-3">RAF 5: Covington vs. Rockhold</a></td>
-<td>January 10, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 10, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+<td>January 13, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 13, 2026 17:00:00"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
+<td>January 14, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 14, 2026 17:00:00"></span></td>
 </tr>
 <tr>
 </tbody>
