--- a/nba.html
+++ b/nba.html
@@ -282,6 +282,110 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 12, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Utah Jazz vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        January 12, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 13, 2026 4:00 PM:00" data-start="January 12, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Boston Celtics vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        January 12, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 13, 2026 4:30 PM:00" data-start="January 12, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Philadelphia 76ers vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        January 12, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 13, 2026 4:30 PM:00" data-start="January 12, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Brooklyn Nets vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        January 12, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 13, 2026 5:30 PM:00" data-start="January 12, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Los Angeles Lakers vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        January 12, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 13, 2026 7:00 PM:00" data-start="January 12, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Charlotte Hornets vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        January 12, 2026 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 13, 2026 7:30 PM:00" data-start="January 12, 2026 7:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
