--- a/nfl.html
+++ b/nfl.html
@@ -184,6 +184,40 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NFL Schedule for Monday, January 12, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         Houston Texans vs Pittsburgh Steelers
+        </a>
+       </td>
+       <td>
+        January 12, 2026 5:15 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 13, 2026 5:15 PM:00" data-start="January 12, 2026 5:15 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
