--- a/fighting.html
+++ b/fighting.html
@@ -99,8 +99,8 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-<td>January 12, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 12, 2026 17:00:00"></span></td>
+<td>January 12, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 12, 2026 11:00:00"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
