--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -137,7 +137,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.shadow-ran.online/tnt5.m3u8');
+            showPlayer('clappr', 'https://601.shadow-ran.online/psg.m3u8');
         };
     </script>
     <script>
